--- a/index.html
+++ b/index.html
@@ -1,10 +1,92 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
 
-  </body>
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="styles.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link rel="stylesheet" href="styles.css">
+  <script src="https://kit.fontawesome.com/b760f7e4ff.js" crossorigin="anonymous"></script>
+  <title>My Bio</title>
+</head>
+
+<body>
+  <!-- Navagtion -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="index.html">Home</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="#">Bio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="projectPage.html">Projects</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="Contact.html">Contact</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
+  <!-- personal background -->
+  <div class="container" id="am">
+    <h1>Hannah Givens</h1>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm">
+          <img src="" alt="">
+        </div>
+        <div class="col-sm">
+          <p>Background info yet to be thunk. Words words words words words Words words words words words Words words words words words Words words words words words Words words words words words Words words words words words  </p>
+          <p>Background info yet to be thunk. Words words words words words Words words words words words Words words words words words Words words words words words Words words words words words Words words words words words  </p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="container" id="am">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm">
+          <ul class="list-unstyled">
+            <h2>Certifications</h2>
+
+            <li>Networking Pro</li>
+            <li><img src="" alt=""></li>
+            <li>Pc Pro</li>
+            <li><img src="" alt=""></li>
+          </ul>
+        </div>
+        <div class="col-sm">
+          <ul class="list-unstyled">
+            <h2>Languages</h2>
+            <li>Html5</li>
+            <li>Python</li>
+            <li>PHP</li>
+            <li>Java</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <footer class="footer mt-auto py-3">
+    <div class="container">
+      <span class="text.muted">  Made by Hannah Givnes May 2020 &copy; <i class="fas fa-mail-bulk"></i> givenshannah10@gmail.com<i class="fas fa-phone"></i> 812-9989  </span>
+    </div>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+</body>
+
 </html>
