--- a/projectPage.html
+++ b/projectPage.html
@@ -76,31 +76,31 @@ B&B Bootstrap Project
     <div class="row">
       <div class="col-sm">
         <div class="card" style="width: 18rem;">
-          <img src="images/plumeriaRoom.jpg" class="card-img-top" alt="...">
+          <img src="pictures/thumbNail1" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Mushal Meida Project</h5>
             <p class="card-text">This was a class project to make a profectional web page for a company that you could of made in your head or if you had a friend or family with a company to base off of.</p>
-            <a href="index.html" class="btn btn-primary">Check it Out</a>
+            <a href="WebSite/index.html" class="btn btn-primary">Check it Out</a>
           </div>
         </div>
       </div>
       <div class="col-sm">
         <div class="card" style="width: 18rem;">
-          <img src="images/maileRoom1.jpg" class="card-img-top" alt="...">
+          <img src="pictures/thumbNail2.png" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Other Project </h5>
-            <p class="card-text">This project displays ...</p>
-            <a href="index.html" class="btn btn-primary">Check it Out</a>
+            <h5 class="card-title">Moblie To Desktop </h5>
+            <p class="card-text">This project displays my ailbility to make my site multi divice friendly.</p>
+            <a href="MobileToDesktop/index.html" class="btn btn-primary">Check it Out</a>
           </div>
         </div>
       </div>
       <div class="col-sm">
         <div class="card" style="width: 18rem;">
-          <img src="images/kailua1.jpg" class="card-img-top" alt="...">
+          <img src="pictures/github-mark.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Git Hub</h5>
             <p class="card-text"> Heres a place to find more example of my coding work.</p>
-            <a href="contact.html" class="btn btn-primary">Check it Out</a>
+            <a href="https://github.com/hgivens?tab=repositories" class="btn btn-primary">Check it Out</a>
           </div>
         </div>
       </div>
