added pictures, tweked code for design

--- a/index.html
+++ b/index.html
@@ -36,12 +36,13 @@
   </nav>
 
   <!-- personal background -->
-  <div class="container" id="am">
+  <div class="background">
+  <div class="container"  >
     <h1>Hannah Givens</h1>
     <div class="container">
       <div class="row">
         <div class="col-sm">
-          <img src="" alt="">
+          <img src="pictures/hannah.jpg" alt="me" width="300px">
         </div>
         <div class="col-sm">
           <p>Background info yet to be thunk. Words words words words words Words words words words words Words words words words words Words words words words words Words words words words words Words words words words words  </p>
@@ -50,19 +51,20 @@
       </div>
     </div>
   </div>
-
-  <div class="container" id="am">
+</div>
+<div class="Certification">
+  <div class="container" >
     <div class="container">
       <div class="row">
         <div class="col-sm">
-          <ul class="list-unstyled">
+
             <h2>Certifications</h2>
 
-            <li>Networking Pro</li>
-            <li><img src="" alt=""></li>
-            <li>Pc Pro</li>
-            <li><img src="" alt=""></li>
-          </ul>
+            <h3>Network Pro </h3>
+            <img src="pictures/networkPro.png" alt="Certification" width="200px">
+            <h3>Pc Pro</h3>
+            <img src="pictures/pcPro.png" alt="Certification" width="200px">
+
         </div>
         <div class="col-sm">
           <ul class="list-unstyled">
@@ -75,6 +77,22 @@
         </div>
       </div>
     </div>
+  </div>
+  </div>
+
+
+  <div class="otherQ">
+  <div class="container">
+    <h2>Other Qualities</h2>
+    <h4>Artisic</h4>
+    <div class="">
+      <img src="pictures/aroraWithArmor.png" alt="art" width="200px">
+      <img src="pictures/balthazar.png" alt="art" width="200px">
+      <img src="pictures/olofi.png" alt="art" width="200px">
+      <img src="pictures/sehkmet.png" alt="art" width="200px">
+    </div>
+    <h4>Works with Linux</h4>
+  </div>
   </div>
 
   <footer class="footer mt-auto py-3">
