--- a/projectPage.html
+++ b/projectPage.html
@@ -10,12 +10,12 @@ B&B Bootstrap Project
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+  <link rel="stylesheet" href="styles.css">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="styles.css">
   <script src="https://kit.fontawesome.com/b760f7e4ff.js" crossorigin="anonymous"></script>
-  <title>B&B</title>
+  <title>Projects</title>
 </head>
 
 <body>
@@ -51,13 +51,16 @@ B&B Bootstrap Project
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="images/kailua2.jpg" class="d-block w-100" alt="A hose">
+          <img src="pictures/carousel1.png" class="d-block w-100" alt="atom code">
         </div>
         <div class="carousel-item">
-          <img src="images/kailua3.jpg" class="d-block w-100" alt="pool">
+          <img src="pictures/carousel2.png" class="d-block w-100" alt="python">
         </div>
         <div class="carousel-item">
-          <img src="images/kailua4.jpg" class="d-block w-100" alt="more house">
+          <img src="pictures/thumbNail2.png" class="d-block w-100" alt="WebSite">
+        </div>
+        <div class="carousel-item">
+          <img src="pictures/thumbNail1" class="d-block w-100" alt="website">
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -70,8 +73,11 @@ B&B Bootstrap Project
       </a>
     </div>
   </div>
-
+<div class="heading">
+  <p>Learn what I Can Do!</p>
+</div>
   <!-- Project Cards -->
+  <div class="cards">
   <div class="container">
     <div class="row">
       <div class="col-sm">
@@ -105,6 +111,7 @@ B&B Bootstrap Project
         </div>
       </div>
     </div>
+  </div>
   </div>
 
   <footer class="footer mt-auto py-3">
