--- a/Contact.html
+++ b/Contact.html
@@ -20,15 +20,12 @@ B&B Bootstrap Project
 <body>
   <!-- navagtion -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="index.html">Home</a>
+    <a class="navbar-brand" href="index.html">Bio</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="#">Bio</a>
-        </li>
         <li class="nav-item">
           <a class="nav-link" href="projectPage.html">Projects</a>
         </li>
@@ -46,7 +43,7 @@ B&B Bootstrap Project
     <div class="row">
       <div class="col-sm">
         <div class="container">
-          <img src="" alt="">
+          <img src="pictures/hannah.jpg" alt="me" width="200">
           <h3>Email:</h3>
           <p>givenshannah10@gmail.com</p>
           <h3>Phone:</h3>
@@ -63,11 +60,9 @@ B&B Bootstrap Project
     </div>
   </div>
 
-  <footer class="footer mt-auto py-3">
-    <div class="container">
-      <span class="text.muted"> Made by Hannah Givnes May 2020 &copy; <i class="fas fa-mail-bulk"></i> givenshannah10@gmail.com<i class="fas fa-phone"></i> 812-9989 </span>
-    </div>
-  </footer>
+  <footer> Hannah Givens &copy; 2020
+ Contact me at <a href="mailto:givenshannah10@gmail.com">givenshannah10@gmail.com</a>
+ </footer>
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
