--- a/index.html
+++ b/index.html
@@ -16,15 +16,12 @@
 <body>
   <!-- Navagtion -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="index.html">Home</a>
+    <a class="navbar-brand" href="index.html">Bio</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="#">Bio</a>
-        </li>
         <li class="nav-item">
           <a class="nav-link" href="projectPage.html">Projects</a>
         </li>
@@ -42,37 +39,36 @@
     <div class="container">
       <div class="row">
         <div class="col-sm">
-          <img src="pictures/hannah.jpg" alt="me" width="300px">
+          <img src="pictures/hannah.jpg" alt="me" width="300">
         </div>
         <div class="col-sm">
-          <p>Background info yet to be thunk. Words words words words words Words words words words words Words words words words words Words words words words words Words words words words words Words words words words words  </p>
-          <p>Background info yet to be thunk. Words words words words words Words words words words words Words words words words words Words words words words words Words words words words words Words words words words words  </p>
+          <p> Hello,  </p>
+          <p>My name is Hannah Givens. I am a young woman who aspires to become a Web Developer once finished with college. In high school I took an alternative couse that took me to a technical center to learn about computers. I knew that I wanted to work with computers from an early age, so I took the necessary steps to do so. Now I how two certification for working on computers. </p>
+          <p>I hope to use my college experence to one day find a job in my preferred field of work, one day making a game on the side, with the hopes of it becoming popular enough to become a series with enough popularity to become a business. </p>
         </div>
       </div>
     </div>
   </div>
 </div>
+
 <div class="Certification">
   <div class="container" >
     <div class="container">
       <div class="row">
         <div class="col-sm">
-
             <h2>Certifications</h2>
-
             <h3>Network Pro </h3>
-            <img src="pictures/networkPro.png" alt="Certification" width="200px">
+            <img src="pictures/networkPro.png" alt="Certification" width="300">
             <h3>Pc Pro</h3>
-            <img src="pictures/pcPro.png" alt="Certification" width="200px">
-
+            <img src="pictures/pcPro.png" alt="Certification" width="300">
         </div>
         <div class="col-sm">
-          <ul class="list-unstyled">
-            <h2>Languages</h2>
-            <li>Html5</li>
-            <li>Python</li>
-            <li>PHP</li>
-            <li>Java</li>
+          <h2 >Languages</h2>
+          <ul class="list-unstyled" >
+            <li class="lang">Html5</li>
+            <li class="lang">Python</li>
+            <li class="lang">PHP</li>
+            <li class="lang">Java</li>
           </ul>
         </div>
       </div>
@@ -85,20 +81,19 @@
   <div class="container">
     <h2>Other Qualities</h2>
     <h4>Artisic</h4>
-    <div class="">
-      <img src="pictures/aroraWithArmor.png" alt="art" width="200px">
-      <img src="pictures/balthazar.png" alt="art" width="200px">
-      <img src="pictures/olofi.png" alt="art" width="200px">
-      <img src="pictures/sehkmet.png" alt="art" width="200px">
+    <div >
+      <img class="art" src="pictures/aroraWithArmor.png" alt="art" width="250">
+      <img class="art" src="pictures/balthazar.png" alt="art" width="250">
+      <img class="art" src="pictures/olofi.png" alt="art" width="250">
+      <img class="art" src="pictures/sehkmet.png" alt="art" width="250">
     </div>
     <h4>Works with Linux</h4>
   </div>
   </div>
 
-  <footer class="footer mt-auto py-3">
-    <div class="container">
-      <span class="text.muted">  Made by Hannah Givnes May 2020 &copy; <i class="fas fa-mail-bulk"></i> givenshannah10@gmail.com<i class="fas fa-phone"></i> 812-9989  </span>
-    </div>
+  <footer> Hannah Givens &copy; 2020
+ Contact me at <a href="mailto:givenshannah10@gmail.com">givenshannah10@gmail.com</a>
+ </footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
