--- a/projectPage.html
+++ b/projectPage.html
@@ -21,15 +21,12 @@ B&B Bootstrap Project
 <body>
   <!-- Navagtion -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="index.html">Home</a>
+    <a class="navbar-brand" href="index.html">Bio</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="#">Bio</a>
-        </li>
         <li class="nav-item">
           <a class="nav-link" href="projectPage.html">Projects</a>
         </li>
@@ -102,7 +99,7 @@ B&B Bootstrap Project
       </div>
       <div class="col-sm">
         <div class="card" style="width: 18rem;">
-          <img src="pictures/github-mark.png" class="card-img-top" alt="...">
+          <img src="pA97394ictures/github-mark.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Git Hub</h5>
             <p class="card-text"> Heres a place to find more example of my coding work.</p>
@@ -114,11 +111,9 @@ B&B Bootstrap Project
   </div>
   </div>
 
-  <footer class="footer mt-auto py-3">
-    <div class="container">
-      <span class="text.muted">  Made by Hannah Givnes May 2020 &copy; <i class="fas fa-mail-bulk"></i> givenshannah10@gmail.com<i class="fas fa-phone"></i> 812-9989  </span>
-    </div>
-  </footer>
+  <footer> Hannah Givens &copy; 2020
+ Contact me at <a href="mailto:givenshannah10@gmail.com">givenshannah10@gmail.com</a>
+ </footer>
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
