--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         </div>
         <div class="col-sm">
           <p> Hello,  </p>
-          <p>My name is Hannah Givens. I am a young woman who aspires to become a Web Developer once finished with college. In high school I took an alternative couse that took me to a technical center to learn about computers. I knew that I wanted to work with computers from an early age, so I took the necessary steps to do so. Now I how two certification for working on computers. </p>
-          <p>I hope to use my college experence to one day find a job in my preferred field of work, one day making a game on the side, with the hopes of it becoming popular enough to become a series with enough popularity to become a business. </p>
+          <p>My name is Hannah Givens. I am a young woman who aspires to become a Web Developer once finished with college. In high school, I took an alternative couse that took me to a technical center to learn about computers. I knew that I wanted to work with computers from an early age, so I took the necessary steps to do so. Now I how two certification for working on computers. </p>
+          <p>I hope to use my college experence to one day find a job in my preferred field of work. I one day hope to making a game on the side, with the dream of it becoming popular enough to become a franchies. </p>
         </div>
       </div>
     </div>
