--- a/projectPage.html
+++ b/projectPage.html
@@ -71,7 +71,7 @@ B&B Bootstrap Project
     </div>
   </div>
 <div class="heading">
-  <p>Learn what I Can Do!</p>
+  <p>Examples of My Work!</p>
 </div>
   <!-- Project Cards -->
   <div class="cards">
@@ -81,8 +81,8 @@ B&B Bootstrap Project
         <div class="card" style="width: 18rem;">
           <img src="pictures/thumbNail1" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Mushal Meida Project</h5>
-            <p class="card-text">This was a class project to make a profectional web page for a company that you could of made in your head or if you had a friend or family with a company to base off of.</p>
+            <h5 class="card-title">Mushal Media Project</h5>
+            <p class="card-text">A class project to make a profectional web page for a company that you could of made in your head or if you had a friend or family with a company to base off of.</p>
             <a href="WebSite/index.html" class="btn btn-primary">Check it Out</a>
           </div>
         </div>
@@ -92,17 +92,17 @@ B&B Bootstrap Project
           <img src="pictures/thumbNail2.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Moblie To Desktop </h5>
-            <p class="card-text">This project displays my ailbility to make my site multi divice friendly.</p>
+            <p class="card-text">A project that displays my ailbility to make my site multi divice friendly.</p>
             <a href="MobileToDesktop/index.html" class="btn btn-primary">Check it Out</a>
           </div>
         </div>
       </div>
       <div class="col-sm">
         <div class="card" style="width: 18rem;">
-          <img src="pA97394ictures/github-mark.png" class="card-img-top" alt="...">
+          <img src="pictures/gitHub.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Git Hub</h5>
-            <p class="card-text"> Heres a place to find more example of my coding work.</p>
+            <p class="card-text"> More examples of my work on Github.com.</p>
             <a href="https://github.com/hgivens?tab=repositories" class="btn btn-primary">Check it Out</a>
           </div>
         </div>
